# gcpmlops

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflow/: cloudbuild.yaml
